# CerealQtSocket

./: CMakeLists.txt  README.md  client.cpp  client.h  dataStructs.cpp  dataStructs.h  main.cpp  mainClient.cpp  server.cpp  server.h
